# eisodos

./: Cargo.toml  README.md  pnpm-lock.yaml  rustfmt.toml
.github/workflows/: main.yml
benchmark/: Cargo.toml
benchmark/benches/: jiminy.rs  pinocchio.rs  solana_nostd_entrypoint.rs  solana_program.rs
benchmark/benches/setup/: mod.rs  runner.rs
benchmark/src/: main.rs
programs/jiminy/: Cargo.toml
programs/jiminy/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
programs/pinocchio/: Cargo.toml
programs/pinocchio/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
programs/pinocchio/src/cpi/: create_account.rs  mod.rs  transfer.rs
programs/solana-nostd-entrypoint/: Cargo.toml
programs/solana-nostd-entrypoint/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
programs/solana-nostd-entrypoint/src/cpi/: create_account.rs  mod.rs  transfer.rs
programs/solana-program/: Cargo.toml
programs/solana-program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
scripts/program/: build.mjs
