[package]
name = "eisodos"
publish = false
edition = "2021"

[[bin]]
name = "coyote"
path = "src/main.rs"

[dev-dependencies]
eisodos-jiminy = { path="../programs/jiminy" }
eisodos-pinocchio = { path="../programs/pinocchio" }
eisodos-solana-program = { path="../programs/solana-program" }
mollusk-svm = "0.1.4"
mollusk-svm-bencher = "0.1.4"
solana-account = "2.2"
solana-instruction = "2.2"
solana-logger = "2.2"
solana-pubkey = "2.2"
solana-system-interface = { version = "1.0" }

