[package]
name = "eisodos-pinocchio"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata.solana]
program-id = "Pinocchio1111111111111111111111111111111111"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = { version = "0.8", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/system-inline" }
pinocchio-pubkey = { version = "0.2", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/system-inline" }
pinocchio-system = { version = "0.2", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/system-inline" }
