[package]
name = "eisodos-pinocchio"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata.solana]
program-id = "Pinocchio1111111111111111111111111111111111"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = "0.9"
pinocchio-pubkey = "0.3"
pinocchio-system = "0.3"
